--- a/public/css/applicant/profile.css
+++ b/public/css/applicant/profile.css
@@ -942,3 +942,38 @@ body {
         display: inline;
     }
 }
+
+/*get profile*/
+.friend-btn {
+    transition: all 0.3s ease;
+}
+
+.friend-btn:hover {
+    background-color: #dc3545 !important;
+    /* red */
+    border-color: #dc3545 !important;
+}
+
+.friend-btn:hover::after {
+    content: "Unfriend";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+}
+
+.friend-btn:hover {
+    color: transparent;
+    /* hide original text */
+}
+
+/* Zoom in animation */
+.modal.fade .modal-dialog {
+    transform: scale(0.7);
+    transition: transform 0.3s ease-out;
+}
+
+.modal.fade.show .modal-dialog {
+    transform: scale(1);
+}
